--- a/.github/workflows/api-unit-tests.yml
+++ b/.github/workflows/api-unit-tests.yml
@@ -1,9 +1,9 @@
-name: Framework unit tests
+name: API unit tests
 
 on:
   pull_request:
     paths: 
-    - 'framework/**'
+    - 'api/**'
 
 jobs:
   build: 
@@ -27,5 +27,5 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r framework/requirements.txt
 
-      - name: Run Framework tests
-        run: python3 -m pytest framework
+      - name: Run API tests
+        run: python3 -m pytest api/api
