--- a/.github/workflows/api-unit-tests.yml
+++ b/.github/workflows/api-unit-tests.yml
@@ -20,12 +20,12 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           cache: 'pip'
-          cache-dependency-path: 'framework/requirements.txt'
+          cache-dependency-path: 'framework/requirements-dev.txt'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r framework/requirements.txt
+          pip install -r framework/requirements-dev.txt
 
       - name: Run API tests
         run: python3 -m pytest api/api
